@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022 Oracle and/or its affiliates.
+ * Copyright (c) 2018, 2024 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -297,7 +297,7 @@ public final class JwtUtil {
         Matcher matcher = LOCALE_PATTERN.matcher(locale);
         Locale result;
         if (matcher.matches()) {
-            result = new Locale(matcher.group(1), matcher.group(2));
+            result = Locale.of(matcher.group(1), matcher.group(2));
         } else {
             result = Locale.forLanguageTag(locale);
         }
